erDiagram
    CUSTOMERS ||--o{ ORDERS : places
    ORDERS ||--o{ LINE_ITEMS : contains
    PRODUCTS ||--o{ LINE_ITEMS : "ordered as"

    CUSTOMERS {
        int customer_id PK
        string first_name
        string last_name
        string account_number
        string phone_number
        string email
        timestamp created_at
        timestamp migrated_at
    }

    ORDERS {
        int order_id PK
        int customer_id FK
        date order_date
        string status
        decimal total_amount
        timestamp migrated_at
    }

    LINE_ITEMS {
        int line_item_id PK
        int order_id FK
        int product_id FK
        int quantity
        decimal unit_price
    }

    PRODUCTS {
        int product_id PK
        string name
        string sku
        decimal price
        timestamp migrated_at
    }

    BACKFILL_CHECKPOINT {
        string entity_name PK
        int last_processed_pk
    }

    BACKFILL_DLQ {
        int id PK
        string entity_name
        int start_pk
        int end_pk
        string exception_class
        string message
        timestamp occurred_at
        bool resolved
        timestamp resolved_at
    }
